fix overflow issue

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 1.3vw;
+  gap: 1.5%;
 }
 
 .mainproj-container {
@@ -18,7 +18,7 @@
   border-radius: var(--outline-radius); 
   border-width: var(--outline-width);
 
-  width: 20.8vw;
+  width: 32%;
   background: var(--card-fill-color);
   box-shadow: var(--box-shadow-default);
   overflow: hidden;
@@ -110,7 +110,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 0.9vw;
+  gap: 1vw;
 }
 
 .smallproj-container{
@@ -119,7 +119,7 @@
   border-radius: var(--outline-radius); 
   border-width: var(--outline-width);
 
-  width: 15.5vw;
+  width: 23.5%;
   background: var(--card-fill-color);
   box-shadow: var(--box-shadow-default);
   overflow: hidden;
